<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_img_description"
            android:scaleType="centerCrop"
            android:src="@drawable/background_img" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0sp"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="180sp"
            android:layout_height="70sp"
            android:layout_marginTop="160sp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_button"
            android:text="@string/play"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/history_button"
            android:layout_width="180sp"
            android:layout_height="70sp"
            android:layout_marginTop="260sp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_button"
            android:text="@string/history"
            android:textSize="20sp"
            android:textColor="@color/white" />

    </RelativeLayout>
</layout>