<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_img"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_img_description" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0sp"
        android:layout_marginTop="40sp"
        android:gravity="center"
        android:text="@string/previous_games"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="95sp"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button_back"
            android:text="@string/back"
            android:layout_width="100sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_height="55sp"
            android:layout_margin="5sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_select"
            android:text="@string/select"
            android:layout_width="100sp"
            android:layout_margin="5sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_height="55sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</RelativeLayout>
